--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -7,161 +7,138 @@
     android:orientation="vertical"
     android:theme="@style/AppTheme">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/main.collapsing"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fitsSystemWindows="true"
-            app:expandedTitleMarginEnd="64dp"
-            app:expandedTitleMarginStart="48dp"
-            app:layout_scrollFlags="scroll">
-
-        </android.support.design.widget.CollapsingToolbarLayout>
-
-        <LinearLayout
-            android:id="@+id/avatar_group"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:visibility="gone"
-            app:layout_scrollFlags="scroll">
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/avatar"
-                android:layout_width="126dp"
-                android:layout_height="126dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/material_baseline_grid_2x"
-                android:src="@drawable/default_avatar"
-
-                app:civ_border_color="?android:colorBackground"
-                app:civ_border_width="4dp"
-                app:layout_collapseMode="parallax"
-                app:layout_scrollFlags="scroll" />
-
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:layout_marginEnd="@dimen/material_baseline_grid_2x"
-                android:layout_marginStart="@dimen/material_baseline_grid_2x"
-                android:layout_marginTop="@dimen/material_baseline_grid_2x"
-                android:background="@color/divider"
-                app:layout_scrollFlags="scroll" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="@dimen/material_baseline_grid_2x"
-            android:layout_marginTop="@dimen/material_baseline_grid_1x"
-            android:background="@color/colorPrimary"
-            android:gravity="center"
-            android:orientation="vertical">
-
-
-            <TextView
-                android:id="@+id/profile_name"
-                style="@style/TextAppearance.AppCompat.Headline"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/material_baseline_grid_0.5x"
-                android:layout_marginStart="@dimen/material_baseline_grid_1x"
-                android:paddingEnd="@dimen/material_baseline_grid_1x"
-                android:paddingStart="@dimen/material_baseline_grid_1x"
-                android:text="Select a Username "
-                android:textAlignment="center"
-                android:textStyle="bold"
-                app:layout_collapseMode="pin" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginStart="@dimen/material_baseline_grid_0.5x"
-                android:layout_marginEnd="@dimen/material_baseline_grid_0.5x"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/current_rank"
-                    style="@style/TextAppearance.AppCompat.Caption"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/material_baseline_grid_0.5x"
-                    android:layout_marginEnd="@dimen/material_baseline_grid_0.5x"
-                    android:gravity="center"
-                    android:text="Rank: "
-                    android:visibility="invisible" />
-
-                <TextView
-                    android:id="@+id/current_KD"
-                    style="@style/TextAppearance.AppCompat.Caption"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/material_baseline_grid_0.5x"
-                    android:layout_marginEnd="@dimen/material_baseline_grid_0.5x"
-                    android:gravity="center"
-                    android:text="K/D: "
-                    android:visibility="invisible" />
-
-                <com.mikepenz.iconics.view.IconicsImageView
-                    android:id="@+id/default_user_status_icon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/material_baseline_grid_0.5x"
-                    android:layout_marginEnd="@dimen/material_baseline_grid_0.5x"
-                    android:layout_centerVertical="true"
-                    android:layout_toEndOf="@+id/profile_name" />
-            </LinearLayout>
-        </LinearLayout>
-
-    </android.support.design.widget.AppBarLayout>
-
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/refresh"
+    <me.calebjones.pubgtrackerforandroid.ui.views.ExtendedStatefulLayout
+        android:id="@+id/overview_state_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        app:emptyLayout="@layout/empty_layout"
+        app:stateTextAppearance="@style/TextAppearance.AppCompat">
 
-        <android.support.v4.widget.NestedScrollView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/root"
+            <android.support.design.widget.AppBarLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:orientation="vertical">
+                android:layout_height="wrap_content">
 
-                <include
-                    layout="@layout/information_card"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="@dimen/material_baseline_grid_2x"
+                    android:layout_marginTop="@dimen/material_baseline_grid_1x"
+                    android:background="@color/colorPrimary"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:id="@+id/profile_name"
+                            style="@style/TextAppearance.AppCompat.Title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:layout_marginEnd="@dimen/material_baseline_grid_1x"
+                            android:layout_marginStart="@dimen/material_baseline_grid_1x"
+                            android:paddingEnd="@dimen/material_baseline_grid_2.5x"
+                            android:paddingStart="@dimen/material_baseline_grid_2x"
+                            android:textAlignment="center"
+                            android:textStyle="bold"
+                            app:layout_collapseMode="pin" />
+
+                        <com.mikepenz.iconics.view.IconicsImageView
+                            android:id="@+id/favorite_icon"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignEnd="@+id/profile_name"
+                            android:layout_centerVertical="true"
+                            android:layout_marginStart="@dimen/material_baseline_grid_2x" />
+
+                    </RelativeLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginEnd="@dimen/material_baseline_grid_0.5x"
+                        android:layout_marginStart="@dimen/material_baseline_grid_0.5x"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/current_rank"
+                            style="@style/TextAppearance.AppCompat.Subhead"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="@dimen/material_baseline_grid_0.5x"
+                            android:layout_marginStart="@dimen/material_baseline_grid_0.5x"
+                            android:gravity="center"
+                            android:text="Rank: "
+                            android:visibility="invisible" />
+
+                        <TextView
+                            android:id="@+id/current_KD"
+                            style="@style/TextAppearance.AppCompat.Subhead"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="@dimen/material_baseline_grid_0.5x"
+                            android:layout_marginStart="@dimen/material_baseline_grid_0.5x"
+                            android:gravity="center"
+                            android:text="K/D: "
+                            android:visibility="invisible" />
+                    </LinearLayout>
+                </LinearLayout>
+
+            </android.support.design.widget.AppBarLayout>
+
+            <android.support.v4.widget.SwipeRefreshLayout
+                android:id="@+id/refresh"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+
+                <android.support.v4.widget.NestedScrollView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_margin="@dimen/material_card_edge_margin" />
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-                <include
-                    android:id="@+id/overview_card"
-                    layout="@layout/playlist_overview_card"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="@dimen/material_card_edge_margin"
-                    android:visibility="gone" />
 
-                <include
-                    android:id="@+id/last_match_card"
-                    layout="@layout/last_match_card"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="@dimen/material_card_edge_margin"
-                    android:visibility="gone" />
+                    <LinearLayout
+                        android:id="@+id/root"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:orientation="vertical">
 
-            </LinearLayout>
-        </android.support.v4.widget.NestedScrollView>
-    </android.support.v4.widget.SwipeRefreshLayout>
+                        <include
+                            layout="@layout/information_card"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_margin="@dimen/material_card_edge_margin" />
+
+                        <include
+                            android:id="@+id/overview_card"
+                            layout="@layout/playlist_overview_card"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_margin="@dimen/material_card_edge_margin"
+                            android:visibility="gone" />
+
+                        <include
+                            android:id="@+id/last_match_card"
+                            layout="@layout/last_match_card"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_margin="@dimen/material_card_edge_margin"
+                            android:visibility="gone" />
+
+                    </LinearLayout>
+                </android.support.v4.widget.NestedScrollView>
+            </android.support.v4.widget.SwipeRefreshLayout>
+        </LinearLayout>
+    </me.calebjones.pubgtrackerforandroid.ui.views.ExtendedStatefulLayout>
 </android.support.design.widget.CoordinatorLayout>
