--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -10,4 +10,5 @@
     <item name="menu_history" type="id">menu_history</item>
     <item name="menu_statistics" type="id">menu_statistics</item>
     <item name="menu_home_master" type="id">menu_home_master</item>
+    <item name="menu_profile_settings" type="id">menu_profile_settings</item>
 </resources>
