--- a/app/src/main/res/layout/playlist_overview_card_full.xml
+++ b/app/src/main/res/layout/playlist_overview_card_full.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/overview_card"
     android:layout_width="match_parent"
@@ -15,7 +16,7 @@
     app:cardPreventCornerOverlap="true"
     app:cardUseCompatPadding="true">
 
-        <!--Second Header-->
+
         <include
             layout="@layout/playlist_layout_full"
             android:layout_width="match_parent"
